# src/film-genres/film-genres.controller.ts
@@ -1,8 +1,10 @@
-import { Controller, Get, Post, Body, Patch, Param, Delete } from '@nestjs/common';
-import { FilmGenresService } from './film-genres.service';
+import { Body, Controller, Delete, Get, Param, Patch, Post } from '@nestjs/common';
+import { ApiTags } from '@nestjs/swagger';
 import { CreateFilmGenreDto } from './dto/create-film-genre.dto';
 import { UpdateFilmGenreDto } from './dto/update-film-genre.dto';
+import { FilmGenresService } from './film-genres.service';
 
+@ApiTags('Films-Genres')
 @Controller('film-genres')
 export class FilmGenresController {
   constructor(private readonly filmGenresService: FilmGenresService) {}
