# src/login/login.controller.ts
@@ -1,0 +1,15 @@
+import { Body, Controller, Post } from '@nestjs/common';
+import { ApiTags } from '@nestjs/swagger';
+import { CreateLoginDto } from './dto/create-login.dto';
+import { LoginService } from './login.service';
+
+@ApiTags('Login')
+@Controller('login')
+export class LoginController {
+  constructor(private readonly loginService: LoginService) {}
+
+  @Post()
+  create(@Body() loginDto: CreateLoginDto) {
+    return this.loginService.login(loginDto);
+  }
+}
